<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- AppliGow -->
    <string name="app_name">AppliGow</string>
    <string name="action_settings">Settings</string>
    <string name="home_loading_time">3000</string>
    <string name="loading">Loading&#8230;</string>

    <!-- Configuration -->
    <string name="port">1234</string>
    <string name="server_ip">192.168.43.219</string>
<!--     <string name="server_ip">192.168.0.12</string> -->
	<string name="API_key">AIzaSyDUIgfsEMze8RgZJ9qVlEM407kz1SejXvI</string>

    <!-- User -->
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="mail">Mail</string>
    <string name="login">Login</string>
    <string name="password">Password</string>

    <!-- Action -->
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>

    <!-- Error -->
    <string name="error_server">Server error&#8230;</string>
    <string name="error_sync">Synchronized error&#8230;</string>
    <string name="error_missing_fields">All fields are required</string>
    <string name="error_login_unavailable">Login unavailable</string>
    <string name="error_sign_in">Invalid login or password</string>
    <string name="undefined">Undefined</string>
    <string name="error_missing_password">Missing password</string>
    <string name="error_password">Invalid password</string>
    <string name="error_mail">Invalid mail</string>
    <string name="error_check_localization">Please check Google\'s location service</string>
    <string name="error_address">Address not found</string>

    <!-- Menu -->
    <string name="menu_map">Map</string>
    <string name="menu_events">Events</string>
    <string name="menu_account">Account</string>
    <string name="menu_account_informations">Informations</string>
    <string name="menu_account_edit">Edit</string>
    
    <!-- Event -->
    <string name="title">Title</string>
    <string name="address">Address</string>
    <string name="category">Category</string>
    <string name="dateStart">Start date</string>
    <string name="dateEnd">End date</string>
    <string name="timeStart">Time start</string>
    <string name="timeEnd">Time end</string>
    <string name="description">Description</string>
    <string name="submit">Submit</string>
    <string-array name="category_array">
        <item>Party</item>
        <item>Music</item>
        <item>Movie</item>
        <item>Sport</item>
        <item>Video game</item>
        <item>Restaurant</item>
        <item>Others</item>
    </string-array>
    <string name="title_required">Title is required</string>
    <string name="event_created">Your event is created</string>
    <string name="event_updated">Your event is updated</string>
    <string name="event_deleted">Your event is deleted</string>
    <string name="no_event">You have not events !\n\nTouch HERE or press Map tab\nto add an event to your events list !</string>
    
    <!-- Dialog -->
    <string name="dialog_title_delete">Delete ?</string>
    <string name="dialog_delete">Are you sure ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

</resources>
