<menu xmlns:android="http://schemas.android.com/apk/res/android" >

<!--     <item -->
<!--         android:id="@+id/action_settings" -->
<!--         android:orderInCategory="100" -->
<!--         android:showAsAction="always" -->
<!--         android:title="@string/action_settings"/> -->
    <item
        android:id="@+id/menu_map"
        android:showAsAction="always"
        android:title="@string/menu_map"/>
    
	<item
        android:id="@+id/menu_events"
        android:showAsAction="always"
        android:title="@string/menu_events"/>
    
    <item
        android:id="@+id/menu_account"
        android:showAsAction="always"
        android:title="@string/menu_account">
        <menu xmlns:android="http://schemas.android.com/apk/res/android" >
            <group >
                <item
                    android:id="@+id/menu_account_informations"
                    android:title="@string/menu_account_informations"/>
                <item
                    android:id="@+id/menu_account_edit"
                    android:title="@string/menu_account_edit"/>
            </group>
        </menu>
    </item>

</menu>
