<?xml version="1.0" encoding="utf-8"?>
<ScrollView 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
    
	<LinearLayout
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical"
	        android:gravity="center" >
	
	    <TableLayout
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content" >
	        
	        <TableRow
	            android:id="@+id/tableRowFirstName"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:gravity="center"
	            android:layout_margin="20dp" >
	
	            <TextView
	                android:id="@+id/textViewLabelFirstName"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/first_name"
	        		style="@style/custome_text_view" />
	
	            <TextView
	                android:id="@+id/textViewFirstName"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/undefined"
	                android:layout_marginLeft="30dp" />
	
	        </TableRow>
	        
	        <TableRow
	            android:id="@+id/tableRowLastName"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:gravity="center"
	            android:layout_margin="20dp" >
	
	            <TextView
	                android:id="@+id/textViewLabelLastName"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/last_name"
	        		style="@style/custome_text_view" />
	
	            <TextView
	                android:id="@+id/textViewLastName"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/undefined"
	                android:layout_marginLeft="30dp" />
	
	        </TableRow>
	        
	        <TableRow
	            android:id="@+id/tableRowMail"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:gravity="center"
	            android:layout_margin="20dp" >
	
	            <TextView
	                android:id="@+id/textViewLabelMail"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/mail"
	        		style="@style/custome_text_view" />
	
	            <TextView
	                android:id="@+id/textViewMail"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/undefined"
	                android:layout_marginLeft="30dp" />
	
	        </TableRow>
	        
	        <TableRow
	            android:id="@+id/tableRowLogin"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:gravity="center"
	            android:layout_margin="20dp" >
	
	            <TextView
	                android:id="@+id/textViewLabelLogin"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/login"
	        		style="@style/custome_text_view" />
	
	            <TextView
	                android:id="@+id/textViewLogin"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/undefined"
	                android:layout_marginLeft="30dp" />
	
	        </TableRow>
		</TableLayout>
		
	    <LinearLayout
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:gravity="center" >
	
	        <Button
	            android:id="@+id/buttonEdit"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:height="30dp"
	            android:layout_margin="30dp"
	            android:text="@string/edit"
	        	style="@style/blue_button" />
		
	        <Button
	            android:id="@+id/buttonDelete"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:height="30dp"
	            android:layout_margin="30dp"
	            android:text="@string/delete"
	        	style="@style/red_button" />
	
	    </LinearLayout>
	
	</LinearLayout>
</ScrollView>