<?xml version="1.0" encoding="utf-8"?>
<ScrollView 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
	<RelativeLayout
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal" >
	
	    <TextView
	        android:id="@+id/textViewLogin"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentTop="true"
	        android:layout_centerHorizontal="true"
	        android:layout_marginTop="41dp"
	        android:text="@string/login" />
	
	    <EditText
	        android:id="@+id/editTextLogin"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/textViewLogin"
	        android:layout_centerHorizontal="true"
	        android:ems="10"
	        android:inputType="textPersonName" >
	
	        <requestFocus />
	    </EditText>
	
	    <TextView
	        android:id="@+id/textViewPassword"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/editTextLogin"
	        android:layout_centerHorizontal="true"
	        android:layout_marginTop="18dp"
	        android:text="@string/password" />
	
	    <EditText
	        android:id="@+id/editTextPassword"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/editTextLogin"
	        android:layout_below="@+id/textViewPassword"
	        android:ems="10"
	        android:inputType="textPassword" />
	
	    <Button
	        android:id="@+id/buttonSignIn"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/editTextPassword"
	        android:layout_centerHorizontal="true"
	        android:layout_marginTop="15dp"
	        android:text="@string/sign_in" />
	
	    <Button
	        android:id="@+id/buttonSignUp"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/buttonSignIn"
	        android:layout_centerHorizontal="true"
	        android:layout_marginTop="42dp"
	        android:text="@string/sign_up" />
	    
	
	</RelativeLayout>
</ScrollView>
