<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_marginLeft="30dp"
    android:layout_marginRight="30dp" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/RelativeLayout1"
            android:layout_width="fill_parent"
            android:layout_height="match_parent" >

            <TableRow
                android:id="@+id/tableRowFirstName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="15dp"
                android:gravity="center" >

                <EditText
                    android:id="@+id/editTextFirstName"
                    style="@style/custom_edit_text"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/first_name"
                    android:inputType="textPersonName" >

                    <requestFocus />
                </EditText>
            </TableRow>

            <TableRow
                android:id="@+id/tableRowLastName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/tableRowFirstName"
                android:layout_below="@+id/tableRowFirstName"
                android:layout_marginTop="15dp"
                android:gravity="center" >

                <EditText
                    android:id="@+id/editTextLastName"
                    style="@style/custom_edit_text"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/last_name"
                    android:inputType="textPersonName" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRowMail"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/tableRowFirstName"
                android:layout_below="@+id/tableRowLastName"
                android:layout_marginTop="15dp"
                android:gravity="center" >

                <EditText
                    android:id="@+id/editTextMail"
                    style="@style/custom_edit_text"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/mail"
                    android:inputType="textEmailAddress" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRowPassword"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/tableRowFirstName"
                android:layout_below="@+id/tableRowMail"
                android:layout_marginTop="15dp"
                android:gravity="center" >

                <EditText
                    android:id="@+id/editTextPassword"
                    style="@style/custom_edit_text"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/password"
                    android:inputType="textPassword" />

            </TableRow>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center" >

            <Button
                android:id="@+id/buttonEdit"
                style="@style/green_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:height="30dp"
                android:text="@string/edit" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>
